docs/envoy/v1.38.0/_sources/intro/arch_overview/security/external_dep_controlplane.rst.txt
External dependencies: ``controlplane``
=======================================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Abseil <https://abseil.io/>`__, `20260107.1 <https://github.com/abseil/abseil-cpp/releases/tag/20260107.1>`__, 2026-02-11, , `Apache-2.0 <https://github.com/abseil/abseil-cpp/blob/20260107.1/LICENSE>`__
  `AWS libcrypto (AWS-LC) <https://github.com/aws/aws-lc>`__, `1.72.0 <https://github.com/aws/aws-lc/releases/tag/v1.72.0>`__, 2026-04-13, `cpe:2.3:a:google:boringssl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aboringssl%3A%2A&search_type=all>`__, 
  `BoringSSL <https://github.com/google/boringssl>`__, `0.20260413.0 <https://github.com/google/boringssl/releases/tag/0.20260413.0>`__, 2026-04-14, `cpe:2.3:a:google:boringssl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aboringssl%3A%2A&search_type=all>`__, `Mixed <https://github.com/google/boringssl/blob/0.20260413.0/LICENSE>`__
  `C++ rules for Bazel <https://github.com/bazelbuild/rules_cc>`__, `0.2.17 <https://github.com/bazelbuild/rules_cc/releases/tag/0.2.17>`__, 2026-02-18, , `Apache-2.0 <https://github.com/bazelbuild/rules_cc/blob/0.2.17/LICENSE>`__
  `c-ares <https://c-ares.haxx.se/>`__, `1.34.6 <https://github.com/c-ares/c-ares/releases/tag/v1.34.6>`__, 2025-12-08, `cpe:2.3:a:c-ares_project:c-ares:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ac-ares_project%3Ac-ares%3A%2A&search_type=all>`__, `c-ares <https://github.com/c-ares/c-ares/blob/cares-1_34_6/LICENSE.md>`__
  `Chrome URL parsing library <https://github.com/google/gurl>`__, `dd4080f <https://github.com/google/gurl/tree/dd4080fec0b443296c0ed0036e1e776df8813aa7>`__, 2022-11-03, , `BSD-3-Clause <https://github.com/google/gurl/blob/dd4080fec0b443296c0ed0036e1e776df8813aa7/LICENSE>`__
  `Clang (Linux ppc64le) <https://llvm.org/>`__, `14.0.0 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-14.0.0>`__, 2022-03-23, `cpe:2.3:a:llvm:clang:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3Aclang%3A%2A&search_type=all>`__, `Apache-2.0 WITH LLVM-exception <https://github.com/llvm/llvm-project/blob/llvmorg-14.0.0/LICENSE.TXT>`__
  `CMake (Linux aarch64) <https://cmake.org/>`__, `4.3.2 <https://github.com/Kitware/CMake/releases/tag/v4.3.2>`__, 2026-04-21, `cpe:2.3:a:kitware:cmake:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Akitware%3Acmake%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/Kitware/CMake/blob/v4.3.2/Copyright.txt>`__
  `CMake (Linux x86_64) <https://cmake.org/>`__, `4.3.2 <https://github.com/Kitware/CMake/releases/tag/v4.3.2>`__, 2026-04-21, `cpe:2.3:a:kitware:cmake:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Akitware%3Acmake%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/Kitware/CMake/blob/v4.3.2/Copyright.txt>`__
  `CMake (source) <https://cmake.org/>`__, `4.3.2 <https://github.com/Kitware/CMake/releases/tag/v4.3.2>`__, 2026-04-21, `cpe:2.3:a:kitware:cmake:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Akitware%3Acmake%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/Kitware/CMake/blob/v4.3.2/Copyright.txt>`__
  `envoy_toolshed <https://github.com/envoyproxy/toolshed>`__, `0.3.33 <https://github.com/envoyproxy/toolshed/releases/tag/bazel-v0.3.33>`__, 2026-04-20, , `Apache-2.0 <https://github.com/envoyproxy/toolshed/blob/bazel-v0.3.33/LICENSE>`__
  `fmt <https://fmt.dev>`__, `12.1.0 <https://github.com/fmtlib/fmt/releases/tag/12.1.0>`__, 2025-10-29, `cpe:2.3:a:fmt:fmt:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afmt%3Afmt%3A%2A&search_type=all>`__, `fmt <https://github.com/fmtlib/fmt/blob/12.1.0/LICENSE>`__
  `Go (Linux amd64) <https://golang.org/>`__, `1.26.2 <https://dl.google.com/go/go1.26.2.linux-amd64.tar.gz>`__, 2025-06-05, `cpe:2.3:a:golang:go:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agolang%3Ago%3A%2A&search_type=all>`__, `BSD-3-Clause <https://golang.org/LICENSE>`__
  `Go (Linux arm64) <https://golang.org/>`__, `1.26.2 <https://dl.google.com/go/go1.26.2.linux-arm64.tar.gz>`__, 2025-06-05, `cpe:2.3:a:golang:go:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agolang%3Ago%3A%2A&search_type=all>`__, `BSD-3-Clause <https://golang.org/LICENSE>`__
  `Go (Linux ppc64le) <https://golang.org/>`__, `1.26.2 <https://dl.google.com/go/go1.26.2.linux-ppc64le.tar.gz>`__, 2026-04-07, `cpe:2.3:a:golang:go:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agolang%3Ago%3A%2A&search_type=all>`__, `BSD-3-Clause <https://go.dev/LICENSE>`__
  `gperftools <https://github.com/gperftools/gperftools>`__, `2.18.1 <https://github.com/gperftools/gperftools/releases/tag/gperftools-2.18.1>`__, 2026-03-06, `cpe:2.3:a:gperftools_project:gperftools:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agperftools_project%3Agperftools%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/gperftools/gperftools/blob/gperftools-2.18.1/COPYING>`__
  `gRPC <https://grpc.io>`__, `1.76.0 <https://github.com/grpc/grpc/releases/tag/v1.76.0>`__, 2025-10-20, `cpe:2.3:a:grpc:grpc:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agrpc%3Agrpc%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/grpc/grpc/blob/v1.76.0/LICENSE>`__
  `jemalloc <https://github.com/jemalloc/jemalloc>`__, `5.3.0 <https://github.com/jemalloc/jemalloc/releases/tag/5.3.0>`__, 2022-05-06, , `BSD-2-Clause <https://github.com/jemalloc/jemalloc/blob/5.3.0/COPYING>`__
  `libcircllhist <https://github.com/openhistogram/libcircllhist>`__, `0.3.2 <https://github.com/openhistogram/libcircllhist/releases/tag/py-0.3.2>`__, 2021-06-08, , `Apache-2.0 <https://github.com/openhistogram/libcircllhist/blob/0.3.2/LICENSE>`__
  `libevent <https://libevent.org>`__, `62c152d <https://github.com/libevent/libevent/tree/62c152d9a7cd264b993dad730c4163c6ede2e0a3>`__, 2020-07-28, `cpe:2.3:a:libevent_project:libevent:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Alibevent_project%3Alibevent%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/libevent/libevent/blob/62c152d9a7cd264b993dad730c4163c6ede2e0a3/LICENSE>`__
  `liburing <https://github.com/axboe/liburing>`__, `2.14 <https://github.com/axboe/liburing/releases/tag/liburing-2.14>`__, 2026-02-07, , 
  `LLVM toolchain for Bazel <https://github.com/bazel-contrib/toolchains_llvm>`__, `1.7.0 <https://github.com/bazel-contrib/toolchains_llvm/releases/tag/v1.7.0>`__, 2026-03-13, , `Apache-2.0 <https://github.com/bazel-contrib/toolchains_llvm/blob/v1.7.0/LICENSE>`__
  `Nghttp2 <https://nghttp2.org>`__, `1.66.0 <https://github.com/nghttp2/nghttp2/releases/tag/v1.66.0>`__, 2025-06-17, `cpe:2.3:a:nghttp2:nghttp2:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Anghttp2%3Anghttp2%3A%2A&search_type=all>`__, `MIT <https://github.com/nghttp2/nghttp2/blob/v1.66.0/LICENSE>`__
  `Ninja <https://ninja-build.org/>`__, `1.13.2 <https://github.com/ninja-build/ninja/releases/tag/v1.13.2>`__, 2025-11-20, `cpe:2.3:a:ninja-build:ninja:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aninja-build%3Aninja%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/ninja-build/ninja/blob/v1.13.2/COPYING>`__
  `nlohmann JSON <https://nlohmann.github.io/json>`__, `3.12.0 <https://github.com/nlohmann/json/releases/tag/v3.12.0>`__, 2025-04-11, `cpe:2.3:a:json-for-modern-cpp_project:json-for-modern-cpp:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ajson-for-modern-cpp_project%3Ajson-for-modern-cpp%3A%2A&search_type=all>`__, `MIT <https://github.com/nlohmann/json/blob/v3.12.0/LICENSE.MIT>`__
  `OpenSSL <https://github.com/openssl/openssl>`__, `3.5.6 <https://github.com/openssl/openssl/releases/tag/openssl-3.5.6>`__, 2026-04-07, `cpe:2.3:a:openssl:openssl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aopenssl%3Aopenssl%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/openssl/openssl/blob/openssl-3.5.6/LICENSE.txt>`__
  `Perfetto <https://perfetto.dev/>`__, `54.0 <https://github.com/google/perfetto/releases/tag/v54.0>`__, 2026-03-02, , `Apache-2.0 <https://github.com/google/perfetto/blob/v54.0/LICENSE>`__
  `Protocol Buffers <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, `cpe:2.3:a:google:protobuf:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aprotobuf%3A%2A&search_type=all>`__, `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v33.2/LICENSE>`__
  `Python rules for Bazel <https://github.com/bazelbuild/rules_python>`__, `1.9.0 <https://github.com/bazelbuild/rules_python/releases/tag/1.9.0>`__, 2026-03-04, , `Apache-2.0 <https://github.com/bazelbuild/rules_python/blob/1.9.0/LICENSE>`__
  `QUICHE <https://github.com/google/quiche>`__, `e68fe05 <https://github.com/google/quiche/tree/e68fe05e70da74a3ea282d927c76f76b4bc4e710>`__, 2026-04-20, , `BSD-3-Clause <https://github.com/google/quiche/blob/e68fe05e70da74a3ea282d927c76f76b4bc4e710/LICENSE>`__
  `RE2 <https://github.com/google/re2>`__, `2024-07-02 <https://github.com/google/re2/releases/tag/2024-07-02>`__, 2024-07-01, , `BSD-3-Clause <https://github.com/google/re2/blob/2024-07-02/LICENSE>`__
  `Rules for using foreign build systems in Bazel <https://github.com/bazelbuild/rules_foreign_cc>`__, `0.15.1 <https://github.com/bazelbuild/rules_foreign_cc/releases/tag/0.15.1>`__, 2025-06-24, , `Apache-2.0 <https://github.com/bazelbuild/rules_foreign_cc/blob/0.15.1/LICENSE>`__
  `rules_license <https://github.com/bazelbuild/rules_license>`__, `1.0.0 <https://github.com/bazelbuild/rules_license/releases/tag/1.0.0>`__, 2024-09-05, , `Apache-2.0 <https://github.com/bazelbuild/rules_license/blob/1.0.0/LICENSE>`__
  `spdlog <https://github.com/gabime/spdlog>`__, `1.17.0 <https://github.com/gabime/spdlog/releases/tag/v1.17.0>`__, 2026-01-04, , `MIT <https://github.com/gabime/spdlog/blob/v1.17.0/LICENSE>`__
  `tcmalloc <https://github.com/google/tcmalloc>`__, `12f2552 <https://github.com/google/tcmalloc/tree/12f255231938d30493186b0a037feedd70f5a1c1>`__, 2025-09-26, , `Apache-2.0 <https://github.com/google/tcmalloc/blob/12f255231938d30493186b0a037feedd70f5a1c1/LICENSE>`__
  `xxHash <https://github.com/Cyan4973/xxHash>`__, `0.8.3 <https://github.com/Cyan4973/xxHash/releases/tag/v0.8.3>`__, 2024-12-30, , `BSD-2-Clause <https://github.com/Cyan4973/xxHash/blob/v0.8.3/LICENSE>`__
  `yaml-cpp <https://github.com/jbeder/yaml-cpp>`__, `0.9.0 <https://github.com/jbeder/yaml-cpp/releases/tag/yaml-cpp-0.9.0>`__, 2026-02-04, `cpe:2.3:a:yaml-cpp_project:yaml-cpp:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ayaml-cpp_project%3Ayaml-cpp%3A%2A&search_type=all>`__, `MIT <https://github.com/jbeder/yaml-cpp/blob/0.9.0/LICENSE>`__
  `zlib-ng <https://github.com/zlib-ng/zlib-ng>`__, `2.3.2 <https://github.com/zlib-ng/zlib-ng/releases/tag/2.3.2>`__, 2025-12-02, , `zlib <https://github.com/zlib-ng/zlib-ng/blob/2.3.2/LICENSE.md>`__


envoy.filters.http.grpc_field_extraction
----------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__


envoy.filters.http.grpc_json_reverse_transcoder
-----------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__


envoy.filters.http.grpc_json_transcoder
---------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__


envoy.filters.http.proto_api_scrubber
-------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__


envoy.filters.http.proto_message_extraction
-------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__


envoy.network.dns_resolver.hickory
----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Bazel rust rules <https://github.com/bazelbuild/rules_rust>`__, `0.69.0 <https://github.com/bazelbuild/rules_rust/releases/tag/0.69.0>`__, 2026-02-26, , `Apache-2.0 <https://github.com/bazelbuild/rules_rust/blob/0.69.0/LICENSE.txt>`__


envoy.wasm.runtime.wasmtime
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Bazel rust rules <https://github.com/bazelbuild/rules_rust>`__, `0.69.0 <https://github.com/bazelbuild/rules_rust/releases/tag/0.69.0>`__, 2026-02-26, , `Apache-2.0 <https://github.com/bazelbuild/rules_rust/blob/0.69.0/LICENSE.txt>`__

